--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/parallax": "^10.0.1",
     "@tailwindcss/vite": "^4.1.10",
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
@@ -19,6 +20,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "react-spring": "^10.0.1",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.10"
   },
